--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -401,9 +401,9 @@ header {
     width: 100%;
     z-index: 1000;
     transition: var(--transition);
-    backdrop-filter: blur(10px);
-    /* background: var(--bg-header);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05); */
+    backdrop-filter: blur(5px);
+    /* background: red; */
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05); */
 }
 
 header .logo,
@@ -433,14 +433,10 @@ nav {
     padding: 15px 0;
 }
 
-.logo {
-    font-size: 1.8rem;
-    font-weight: 700;
+.logo-svg {
     color: var(--primary);
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    height: 100%;
+    display: block;
+    height: 3rem;
 }
 
 .nav-links {
@@ -801,7 +797,6 @@ nav {
     margin-top: 1rem;
     line-height: 1.6;
     font-size: 1rem;
-    font-family: monospace;
     white-space: pre-wrap;
     max-height: 350px;
     overflow-y: auto;
@@ -1687,6 +1682,10 @@ footer {
         justify-content: center;
         gap: 4rem;
     }
+    .hero-content {
+        margin: 0 auto;
+        margin-top: 25rem;
+    }
 }
 @media (max-width: 992px) {
     section {
@@ -1743,12 +1742,8 @@ footer {
         text-align: center;
     }
 
-    .hero-content {
-        margin: 0 auto;
-    }
-
     .hero-btns {
-        justify-content: center;
+        align-items: center;
     }
 
     .hero-float-image {
@@ -1773,6 +1768,10 @@ footer {
     }
     .hero-container {
         gap: 0rem;
+    }
+
+    .hero-content {
+        margin: 0 auto;
     }
     .terminal-content {
         height: 0rem;
